--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sinto",
-  "version": "1.3.1",
+  "version": "1.4.0",
   "description": "Website project development manager",
   "bin": {
     "sin": "sin.js"
@@ -12,8 +12,10 @@
   "license": "MIT",
   "dependencies": {
     "browser-sync": "^3.0.2",
+    "commander": "^12.1.0",
     "fs-extra": "^11.2.0",
     "gulp": "^5.0.0",
+    "jsonfile": "^6.1.0",
     "yargs": "^17.7.2"
   },
   "keywords": [
